--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -2,5 +2,5 @@
 
 # - src: victorock.tower_config
 #   name: ansible-tower-config
-- src: https://github.com/coreywan/ansible-role-tower-config
+- src: https://github.com/coreywan/ansible-role-tower-config.git
   name: ansible-tower-config
