make sure we have the latest tower cli installed

--- a/pb-tower-config-management.yml
+++ b/pb-tower-config-management.yml
@@ -10,6 +10,7 @@
     - name: Install Ansible Tower CLI
       pip:
         name: ansible-tower-cli
+        state: latest
 
     - name: Build core configurations
       include_role:
