--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -4,3 +4,6 @@
 #   name: ansible-tower-config
 - src: git+https://github.com/coreywan/ansible-role-tower-config
   name: ansible-tower-config
+
+- src: https://github.com/ServiceNowITOM/ansible-role-mid
+  name: ansible-role-mid
