--- a/pb-tower-config-management.yml
+++ b/pb-tower-config-management.yml
@@ -1,5 +1,6 @@
 - name: Config Manage Jumpbox
-  hosts: localhost
+  hosts: jumpbox
+  become: true
   tasks:
     - name: Install Ansible Tower CLI
       pip:
